# semdecomp

./: README.md  pyproject.toml
src/: semdecomp.py
